# bdns

./: .gitignore  Cargo.toml  README.md  ROUTES.md  Taskfile.yml  buf.gen.yaml  flake.nix
.github/workflows/: ci.yml
api/: Cargo.toml  build.rs
api/openapi/: auth.swagger.json  category.swagger.json  helloworld.swagger.json  pool.swagger.json  profile.swagger.json  timeblock.swagger.json  user.swagger.json  whitelist.swagger.json
api/proto/: auth.proto  authentication.proto  category.proto  helloworld.proto  pool.proto  profile.proto  timeblock.proto  user.proto  whitelist.proto
api/src/: client.rs  main.rs  server.rs
api/src/proto/: auth.rs  category.rs  mod.rs  pool.rs  profiles.rs  timeblock.rs  user.rs  whitelist.rs
api/src/router/: macros.rs  mod.rs  router.rs
api/src/router/routes/: auth.rs  category.rs  mod.rs  pool.rs  profile.rs  timeblock.rs  user.rs  whitelist.rs
bdns-app/: Cargo.toml  Dioxus.toml
bdns-app/src/: app.rs
bdns-app/src-tauri/: Cargo.toml  tauri.conf.json
bdns-app/src-tauri/src/: main.rs
dns/: .air.toml  .env.local-example  .env.prod-example  .env.valkey  AI_TEST.md  API.md  Cargo.toml  DEPLOY.md  DNS.md  Dockerfile  README.md  RULEENGINE.md  TODO.md  Taskfile.yml  conf.yaml  coverage.out  docker-compose.yml  go.mod  go.sum  prod-docker-compose.yml  seed.sql  server.crt  server.key  test.sh
dns/migrations/: 20260310151542_users.sql  20260310153028_blocks.sql  20260311111515_whitelists.sql  20260311120000_user_category_blocks.sql  20260317123909_freinds.sql  (+2 more)
src/: copy.rs
ui/: README.md  package-lock.json  package.json
(+86 files in other folders)
