[package]
name = "api"
version = "0.1.0"
edition = "2024"


[[bin]] 
name = "server"
path = "src/server.rs"

[[bin]] 
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.14.3"
tokio = { version="1.52.1", features=["macros","rt-multi-thread"]}
tonic = "0.14.5"
tonic-prost = "0.14.5"


[build-dependencies]
tonic-prost-build = "*"
