[package]
name = "api"
version = "0.1.0"
edition = "2024"



[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version="1.52.1", features=["macros","rt-multi-thread"]}
tonic = "0.14.5"
tonic-prost = "0.14.5"
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = {version="0.3.23", features=["env-filter"]}


[build-dependencies]
tonic-prost-build = "*"
